# casadi-release

./: 0001-Added-install-rule-for-package.xml.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
external_packages/blasfeo/src/kernel/avx/: kernel_dgemm_4x4_lib4.S  kernel_dgemm_8x4_lib4.S  kernel_dgemv_12_lib4.S  kernel_dgemv_4_lib4.S  kernel_dgemv_8_lib4.S  kernel_dsymv_6_lib4.S
external_packages/blasfeo/src/kernel/avx2/: kernel_dgemm_12x4_lib4.S  kernel_dgemm_4x4_lib4.S  kernel_dgemm_8x4_lib4.S  kernel_dgemv_8_lib4.S  kernel_dsymv_6_lib4.S
external_packages/blasfeo/src/kernel/fma/: kernel_dgemm_4x4_lib4.S
external_packages/blasfeo/src/kernel/sse3/: kernel_dgemm_4x4_lib4.S
external_packages/superscs/.travis/: scs_before_install.sh  scs_install.sh
external_packages/superscs/docs/: installation__page_8h.html  installation__page_8h_source.html  page_installation.html
external_packages/superscs/pages/: installation_page.h
