<?xml version="1.0"?>
<package format="2">
  <name>casadi</name>
  <version>3.5.5</version>
  <description>The CasADi library from https://web.casadi.org/</description>
  <url>https://web.casadi.org/</url>

  <author>Joris Gillis</author>
  <author>Joel Andersson</author>
  <maintainer email="yakun@hnu.edu.cn">Yakun Ouyang</maintainer>
  <license>LGPL-3.0</license>

  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>cmake</build_depend>
  
  <depend>coinor-libipopt-dev</depend>
  <depend>gfortran</depend>
  <depend>liblapack-dev</depend>
  <depend>pkg-config</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

